# cpp_gas_dispersion_demo

./: .gitignore  Dockerfile  compose.yml
.devcontainer/: devcontainer.json
AD_demo/: CMakeLists.txt  adv_diff.py  main.cpp
AD_demo/u.bp/: data.0  md.0  md.idx  profiling.json
matrix_generator/: matrix_generator.py
mwe_poisson/: CMakeLists.txt  csr_problem_reader.cpp  csr_problem_reader.hpp  fem_poisson_p1.cpp  mesh.hpp
poisson_demo/: CMakeLists.txt  main.cpp  u_p0_000000.vtu
poisson_demo/u.bp/: data.0  md.0  md.idx  profiling.json
spd_problem_generator/: spd_problem_generator.py
spd_solver/: CMakeLists.txt
spd_solver/solver/: CMakeLists.txt  main.cpp
spd_solver/src/: cg.hpp  config.hpp  csr.cpp  csr.hpp  fixed_point.hpp  fixed_q1516.hpp  utils.hpp
spd_solver/tests/: CMakeLists.txt  fixed_ops_test.cpp
